# 3PSDF

./: README.md
data_generation/: .gitignore  CMakeLists.txt  README.md  batch_generate.py
data_generation/data/: todo.txt
data_generation/src/: OpenGLCamera.cpp  OpenGLCamera.h  batchGenOctL3PSDF.cpp  batch_generate.cpp  computeDistField.cpp  computeDistField.h  computeVisualHull.cpp  computeVisualHull.h  distComputeUtility.cpp  distComputeUtility.h  genOctreeL3PSDFSamples.cpp  generate_samples.cpp  main.cpp  utilities.cpp  utilities.h  utility_file_read.cpp  utility_file_read.h  visualization.cpp  visualization.h
data_generation/src/apps/: batchGen3PoleSDF.cpp  compute3PoleSDF.cpp  compute3PoleSDF.h  computeLocal3PoleSDF.cpp  computeLocal3PoleSDF.h  generate3PoleSDF.cpp  generateLocal3PoleSDF.cpp  generateSphereField.cpp  removeFacesWithSameVerts.cpp
data_generation/src/generateSamples/: batchGenOctL3PSDF.cpp  genOctreeL3PSDFSamples.cpp
data_generation/src/lib/: computeLocal3PoleSDF.cpp  computeLocal3PoleSDF.h  compute_3psdf_samples.cpp  compute_3psdf_samples.h  distComputeUtility.cpp  distComputeUtility.h  dist_compute.cpp  dist_compute.h  utilities.cpp  utilities.h
single_view_recon/: .gitignore  README.md  test.py
single_view_recon/model/: dataLoader.py  mlpClassifier.py  network.py  pointConv.py
single_view_recon/src/: test.py  train.py
single_view_recon/src/model/: dataLoader.py  data_loader.py  imgEncoder.py  img_encoder.py  mlpClassifier.py  network.py  pointConv.py
single_view_recon/src/utils/: io_utils.py  shapenet_tfrecord_generator.py  transform_utils.py
single_view_recon/utils/: io_utils.py  transform_utils.py
